[package]
name = "steno-phonetics"
version = "0.1.0"
edition = "2021"

[dependencies]
color-eyre = "0.6.3"
either = "1.13.0"
enumset = "1.1.5"
lru = "0.13.0"
reqwest = { version = "0.12.12", features = ["blocking", "json"] }
serde = { version = "1.0.217", features = ["derive"] }
trie-rs = "0.4.2"

[profile.dev.package.backtrace]
opt-level = 3